--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="This is a lion">
+      <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="This is a lion"
+      title="A cool lion">
+
   </body>
 </html>
